[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -52,6 +52,17 @@ Pellentesque a nulla cum sociis natoque penatibus et magnis dis parturient.
 Aliquam tincidunt urna, nulla ullamcorper vestibulum turpis.
 Pellentesque cursus luctus mauris \citep{Luger2021}.
 
+\begin{figure}[ht!]
+    \script{ex1_2.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:random_bias}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
