[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -53,7 +53,7 @@ Aliquam tincidunt urna, nulla ullamcorper vestibulum turpis.
 Pellentesque cursus luctus mauris \citep{Luger2021}.
 
 \begin{figure}[ht!]
-    \script{ex1_2.py}
+    \script{random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
         \caption{
