[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -66,7 +66,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \begin{figure}[ht!]
     \script{create_master_bias.py}
     \begin{centering}
-        \includegraphics[width=\linewidth]{figures/create_master_bias.pdf}
+        \includegraphics[width=\linewidth]{figures/master_bias.pdf}
         \caption{
             Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
         }
