[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -74,6 +74,17 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
+\begin{figure}[ht!]
+    \script{first_ron_estimates.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/bias_frame_distributions.pdf}
+        \caption{
+            INSTERT CAPTION
+        }
+        \label{fig:master_bias}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
