--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -70,7 +70,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
         \caption{
             INSTERT CAPTION
         }
-        \label{fig:master_bias}
+        \label{fig:bias_frame_distributions}
     \end{centering}
 \end{figure}
 
