--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -75,24 +75,24 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{create_master_bias.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_bias.pdf}
-        \caption{
-            Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
-        }
-        \label{fig:master_bias}
-    \end{centering}
-\end{figure}
-
-\begin{figure}[ht!]
-    \script{create_master_bias.py}
+    \script{create_master_biases.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_frame_stats.pdf}
         \caption{
             Master Bias frames created using 1-40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
         }
         \label{fig:bias_frame_stats}
+    \end{centering}
+\end{figure}
+
+\begin{figure}[ht!]
+    \script{master_bias_figure.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_bias.pdf}
+        \caption{
+            Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
+        }
+        \label{fig:master_bias}
     \end{centering}
 \end{figure}
 
