[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -96,6 +96,17 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
+\begin{figure}[ht!]
+    \script{calibrate_darks.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/random_dark_frames.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:random_darks}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
