[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -97,13 +97,13 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{calibrate_darks.py}
+    \script{create_master_dark.py}
     \begin{centering}
-        \includegraphics[width=\linewidth]{figures/random_dark_frames.pdf}
+        \includegraphics[width=\linewidth]{figures/master_dark.pdf}
         \caption{
             Plot showing 4 random bias frames.
         }
-        \label{fig:random_darks}
+        \label{fig:master_dark}
     \end{centering}
 \end{figure}
 
