--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -107,6 +107,28 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
+\begin{figure}[ht!]
+    \script{master_skyflats_figure.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_skyflats.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
+
+\begin{figure}[ht!]
+    \script{master_lampflats_figure.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_lampflats.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
