--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -110,7 +110,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \begin{figure}[ht!]
     \script{master_skyflats_figure.py}
     \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_skyflats.pdf}
+        \includegraphics[width=\linewidth]{figures/master_skyflat.pdf}
         \caption{
             Plot showing 4 random bias frames.
         }
@@ -121,7 +121,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \begin{figure}[ht!]
     \script{master_lampflats_figure.py}
     \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_lampflats.pdf}
+        \includegraphics[width=\linewidth]{figures/master_lampflat.pdf}
         \caption{
             Plot showing 4 random bias frames.
         }
