[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -75,7 +75,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{create_master_biases.py}
+    \script{master_biases_stats_figure.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_frame_stats.pdf}
         \caption{
