[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -97,7 +97,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{create_master_dark.py}
+    \script{master_dark_figure.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/master_dark.pdf}
         \caption{
