[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -129,6 +129,17 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
+\begin{figure}[ht!]
+    \script{science_sky_image_figure.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/science_sky_cal.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
