[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -53,7 +53,7 @@ Aliquam tincidunt urna, nulla ullamcorper vestibulum turpis.
 Pellentesque cursus luctus mauris \citep{Luger2021}.
 
 \begin{figure}[ht!]
-    \script{random_bias_frames.py}
+    \script{figures/random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
         \caption{
@@ -64,92 +64,92 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{first_ron_estimates.py}
+    \script{figures/bias_frame_histograms.py}
     \begin{centering}
-        \includegraphics[width=\linewidth]{figures/bias_frame_distributions.pdf}
+        \includegraphics[width=\linewidth]{figures/bias_frame_histograms.pdf}
         \caption{
             INSTERT CAPTION
         }
-        \label{fig:bias_frame_distributions}
+        \label{fig:bias_frame_histograms}
     \end{centering}
 \end{figure}
 
-\begin{figure}[ht!]
-    \script{master_biases_stats_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/bias_frame_stats.pdf}
-        \caption{
-            Master Bias frames created using 1-40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
-        }
-        \label{fig:bias_frame_stats}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{master_biases_stats_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/bias_frame_stats.pdf}
+%         \caption{
+%             Master Bias frames created using 1-40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
+%         }
+%         \label{fig:bias_frame_stats}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{master_bias_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_bias.pdf}
-        \caption{
-            Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
-        }
-        \label{fig:master_bias}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{master_bias_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/master_bias.pdf}
+%         \caption{
+%             Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
+%         }
+%         \label{fig:master_bias}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{master_dark_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_dark.pdf}
-        \caption{
-            Plot showing 4 random bias frames.
-        }
-        \label{fig:master_dark}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{master_dark_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/master_dark.pdf}
+%         \caption{
+%             Plot showing 4 random bias frames.
+%         }
+%         \label{fig:master_dark}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{master_skyflats_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_skyflat.pdf}
-        \caption{
-            Plot showing 4 random bias frames.
-        }
-        \label{fig:master_dark}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{master_skyflats_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/master_skyflat.pdf}
+%         \caption{
+%             Plot showing 4 random bias frames.
+%         }
+%         \label{fig:master_dark}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{master_lampflats_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/master_lampflat.pdf}
-        \caption{
-            Plot showing 4 random bias frames.
-        }
-        \label{fig:master_dark}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{master_lampflats_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/master_lampflat.pdf}
+%         \caption{
+%             Plot showing 4 random bias frames.
+%         }
+%         \label{fig:master_dark}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{science_sky_image_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/science_sky_cal.pdf}
-        \caption{
-            Plot showing 4 random bias frames.
-        }
-        \label{fig:master_dark}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{science_sky_image_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/science_sky_cal.pdf}
+%         \caption{
+%             Plot showing 4 random bias frames.
+%         }
+%         \label{fig:master_dark}
+%     \end{centering}
+% \end{figure}
 
-\begin{figure}[ht!]
-    \script{science_lamp_image_figure.py}
-    \begin{centering}
-        \includegraphics[width=\linewidth]{figures/science_lamp_cal.pdf}
-        \caption{
-            Plot showing 4 random bias frames.
-        }
-        \label{fig:master_dark}
-    \end{centering}
-\end{figure}
+% \begin{figure}[ht!]
+%     \script{science_lamp_image_figure.py}
+%     \begin{centering}
+%         \includegraphics[width=\linewidth]{figures/science_lamp_cal.pdf}
+%         \caption{
+%             Plot showing 4 random bias frames.
+%         }
+%         \label{fig:master_dark}
+%     \end{centering}
+% \end{figure}
 
 \bibliography{bib}
 
