[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -53,7 +53,7 @@ Aliquam tincidunt urna, nulla ullamcorper vestibulum turpis.
 Pellentesque cursus luctus mauris \citep{Luger2021}.
 
 \begin{figure}[ht!]
-    \script{figures/random_bias_frames.py}
+    %\script{figures/random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
         \caption{
@@ -64,7 +64,7 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
 \end{figure}
 
 \begin{figure}[ht!]
-    \script{figures/bias_frame_histograms.py}
+    %\script{figures/bias_frame_histograms.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_frame_histograms.pdf}
         \caption{
