[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -52,27 +52,27 @@ Pellentesque a nulla cum sociis natoque penatibus et magnis dis parturient.
 Aliquam tincidunt urna, nulla ullamcorper vestibulum turpis.
 Pellentesque cursus luctus mauris \citep{Luger2021}.
 
-% \begin{figure}[ht!]
-%     %\script{figures/random_bias_frames.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:random_bias}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    %\script{figures/random_bias_frames.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/random_bias_frames.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:random_bias}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     %\script{figures/bias_frame_histograms.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/bias_frame_histograms.pdf}
-%         \caption{
-%             INSTERT CAPTION
-%         }
-%         \label{fig:bias_frame_histograms}
-%     \end{centering}
-%\end{figure}
+\begin{figure}[ht!]
+    %\script{figures/bias_frame_histograms.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/bias_frame_histograms.pdf}
+        \caption{
+            INSTERT CAPTION
+        }
+        \label{fig:bias_frame_histograms}
+    \end{centering}
+\end{figure}
 
 % \begin{figure}[ht!]
 %     \script{master_biases_stats_figure.py}
