--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -74,82 +74,82 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
-% \begin{figure}[ht!]
-%     \script{master_biases_stats_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/bias_frame_stats.pdf}
-%         \caption{
-%             Master Bias frames created using 1-40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
-%         }
-%         \label{fig:bias_frame_stats}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/master_biases_stds.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_bias_stds.pdf}
+        \caption{
+            Master Bias frames created using 1-40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
+        }
+        \label{fig:bias_frame_stats}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{master_bias_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/master_bias.pdf}
-%         \caption{
-%             Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
-%         }
-%         \label{fig:master_bias}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/master_bias_frame.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_bias_frame.pdf}
+        \caption{
+            Master Bias frame created using 40 frames. Outliers excluded using $\sigma$-clipping with median and MAD-STD with $\pm3\sigma$-thresholds. Frames combined using averaging.
+        }
+        \label{fig:master_bias}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{master_dark_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/master_dark.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:master_dark}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/master_dark_frame.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_dark_frame.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{master_skyflats_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/master_skyflat.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:master_dark}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/master_skyflat_frames.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_skyflat_frames.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{master_lampflats_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/master_lampflat.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:master_dark}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/master_lampflat_frames.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/master_lampflat_frames.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{science_sky_image_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/science_sky_cal.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:master_dark}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/skyflat_calibrated_science_images.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/skyflat_calibrated_science_images.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
 
-% \begin{figure}[ht!]
-%     \script{science_lamp_image_figure.py}
-%     \begin{centering}
-%         \includegraphics[width=\linewidth]{figures/science_lamp_cal.pdf}
-%         \caption{
-%             Plot showing 4 random bias frames.
-%         }
-%         \label{fig:master_dark}
-%     \end{centering}
-% \end{figure}
+\begin{figure}[ht!]
+    \script{figures/lampflat_calibrated_science_images.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/lampflat_calibrated_science_images.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
 
 \bibliography{bib}
 
