[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -151,6 +151,28 @@ Pellentesque cursus luctus mauris \citep{Luger2021}.
     \end{centering}
 \end{figure}
 
+\begin{figure}[ht!]
+    \script{figures/skyflat_calibrated_standard_star_images.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/skyflat_calibrated_standard_star_images.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
+
+\begin{figure}[ht!]
+    \script{figures/lampflat_calibrated_standard_star_images.py}
+    \begin{centering}
+        \includegraphics[width=\linewidth]{figures/lampflat_calibrated_standard_star_images.pdf}
+        \caption{
+            Plot showing 4 random bias frames.
+        }
+        \label{fig:master_dark}
+    \end{centering}
+\end{figure}
+
 \bibliography{bib}
 
 \end{document}
