--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -15,6 +15,8 @@
 % Author list
 \author{@jacob-hjortlund}
 
+\var{1}
+
 % Abstract with filler text
 \begin{abstract}
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
