--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -1,11 +1,11 @@
 % Define document class
 \documentclass{aastex631}
 \usepackage{showyourwork}
-% \usepackage{datatool, filecontents}
-% \DTLsetseparator{: }% Set the separator between the columns.
-% \DTLloaddb[noheader, keys={thekey,thevalue}]{mydata}{output/ron_estimates.dat}
-% % Loads mydata.dat with column headers 'thekey' and 'thevalue'
-% \newcommand{\var}[1]{\DTLfetch{my_data}{thekey}{#1}{thevalue}}
+\usepackage{datatool, filecontents}
+\DTLsetseparator{,}% Set the separator between the columns.
+\DTLloaddb[noheader, keys={thekey,thevalue}]{mydata}{output/ron_estimates.dat}
+% Loads mydata.dat with column headers 'thekey' and 'thevalue'
+\newcommand{\var}[1]{\DTLfetch{my_data}{thekey}{#1}{thevalue}}
 % Begin!
 \begin{document}
 
@@ -13,9 +13,8 @@
 \title{An open source scientific article}
 
 % Author list
-\author{@jacob-hjortlund}
+\author{@jacob-hjortlund }
 
-%\var{1}
 
 % Abstract with filler text
 \begin{abstract}
