--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -1,11 +1,11 @@
 % Define document class
 \documentclass{aastex631}
 \usepackage{showyourwork}
-\usepackage{datatool, filecontents}
-\DTLsetseparator{,}% Set the separator between the columns.
-\DTLloaddb[noheader, keys={thekey,thevalue}]{mydata}{output/ron_estimates.dat}
+% \usepackage{datatool, filecontents}
+% \DTLsetseparator{,}% Set the separator between the columns.
+% \DTLloaddb[noheader, keys={thekey,thevalue}]{mydata}{output/ron_estimates.dat}
 % Loads mydata.dat with column headers 'thekey' and 'thevalue'
-\newcommand{\var}[1]{\DTLfetch{my_data}{thekey}{#1}{thevalue}}
+% \newcommand{\var}[1]{\DTLfetch{my_data}{thekey}{#1}{thevalue}}
 % Begin!
 \begin{document}
 
