[showyourwork] overleaf sync

--- a/src/tex/bib.bib
+++ b/src/tex/bib.bib
@@ -13,3 +13,13 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv211006271L},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@misc{McArthur_2013, 
+    author={Guy McArthur, Hartmut Frommert},
+    title={Messier 67}, 
+    url={http://www.messier.seds.org/m/m067.html}, 
+    journal={Messier Object 67},  
+    year={2013}, 
+    month={Dec}
+} 
