[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -79,7 +79,7 @@ To find the pixels statistics of the bias files we divide the files into four qu
 \script{figures/random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_all_STATS_images.pdf}
-        \caption{}
+        \caption{Statistics of the}
         \label{fig:bias_STATS}
     \end{centering}
 \end{figure}
@@ -184,6 +184,10 @@ Flat field frames are taken using an evenly illuminated surface and are used to 
         \label{fig:master_dark}
     \end{centering}
 \end{figure}
+
+\section{Photometric Calibration of Standard Stars}
+
+\subsection{Identification of Standard Stars}
 
 
 \bibliography{bib}
