[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -79,7 +79,7 @@ To find the pixels statistics of the bias files we divide the files into four qu
 \script{figures/random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_all_STATS_images.pdf}
-        \caption{Statistics of the}
+        \caption{Statistics of the minimum, maximum, and mean adu value of the 40 bias files. The x axis shows the bias file from 1 to 40, and the y-axis}
         \label{fig:bias_STATS}
     \end{centering}
 \end{figure}
