[showyourwork] overleaf sync

--- a/src/tex/ms.tex
+++ b/src/tex/ms.tex
@@ -76,7 +76,7 @@ Fig. \ref{fig:random_bias} Shows four random bias files form the filtered files.
 To find the pixels statistics of the bias files we divide the files into four quadrants, excluding a border of 20 pixels, and measure the mean, max, min and standard deviation of the quadrants as well as the entire FOV, again excluding the border of 20 pixels. As we can see in Fig. \ref{fig:bias_STATS} the minimum values of the four quadrants are very similar. The maximum value tends to either fall in the first or the third quadrant, and the mean shows that the first and second quadrants have the lowest mean value. When looking at the bias files there is a tendency towards slightly higher bias levels in the bottom half of the image along with some random dots here and there, but no strong features appear. When looking at the histogram of the bias values in Fig. \ref{fig:hist_all_bias} we also see that besides a few outliers the histogram is a nice Gaussian shape. 
 
 \begin{figure}[ht!]
-\script{figures/random_bias_frames.py}
+%\script{figures/random_bias_frames.py}
     \begin{centering}
         \includegraphics[width=\linewidth]{figures/bias_all_STATS_images.pdf}
         \caption{Statistics of the minimum, maximum, and mean adu value of the 40 bias files. The x-axis shows the bias file from 1 to 40, and the y-axis shows the min, max, and mean values of all 40 bias files.}
